tests/data/midterm/midterm/2018386/Q6/submission_1/.vocStudentSubmissionReport.txt

[Executed at: Wed Mar 14 1:55:57 PDT 2018]

Traceback (most recent call last):
  File "/home/ccc_v1_c79523__48809/asn24778_45/asn24782_4/asnlib/submission.py", line 8, in <module>
    from q6_work import find_path
  File "./q6_work.py", line 4
    f = open.("mrt_lines_short.txt")
             ^
SyntaxError: invalid syntax
Command exited with non-zero status 1
